@@ -120,8 +120,8 @@ public class ApplicationMapperTest {
         assertThat(tenancyAgreementDetails).isNotNull();
         assertThat(tenancyAgreementDetails.getCopyOfTenancyAgreement()).isEqualTo(YesOrNo.YES);
         assertThat(tenancyAgreementDetails.getNoTenancyAgreementReason()).isEqualTo("No agreement reason");
-        assertThat(tenancyAgreementDetails.getTenancyAgreementEvidence()).isNotNull();
-        assertThat(tenancyAgreementDetails.getTenancyAgreementEvidence().getUrl())
+        assertThat(tenancyAgreementDetails.getTenancyAgreementDocument()).isNotNull();
+        assertThat(tenancyAgreementDetails.getTenancyAgreementDocument().getUrl())
             .isEqualTo("http://dm-store/doc/tenancy-agreement");
     }
 
@@ -574,7 +574,7 @@ public class ApplicationMapperTest {
     }
 
     @Test
-    public void shouldReturnNullWhenTenancyDetailsIsNull() {
+    public void shouldMapPropertyDetailsWhenTenancyDetailsIsNull() {
         PTCaseEntity ptCaseEntity = PTCaseEntity.builder()
             .tenancyDetails(Collections.emptyList())
             .marketRentCases(List.of(MarketRentCaseEntity.builder().build()))
@@ -585,11 +585,13 @@ public class ApplicationMapperTest {
 
         PropertyDetailsDto result = ApplicationMapper.mapPropertyDetails(ptCaseEntity, party);
 
-        assertThat(result).isNull();
+        assertThat(result).isNotNull();
+        assertThat(result.getOtherFacilitiesAvailable()).isNull();
+        assertThat(result.getLandlordRepairsDetails()).isNull();
     }
 
     @Test
-    public void shouldReturnNullWhenMarketRentCaseIsNull() {
+    public void shouldMapPropertyDetailsWhenMarketRentCaseIsNull() {
         PTCaseEntity ptCaseEntity = PTCaseEntity.builder()
             .tenancyDetails(List.of(TenancyDetailsEntity.builder().build()))
             .marketRentCases(Collections.emptyList())
@@ -600,11 +602,13 @@ public class ApplicationMapperTest {
 
         PropertyDetailsDto result = ApplicationMapper.mapPropertyDetails(ptCaseEntity, party);
 
-        assertThat(result).isNull();
+        assertThat(result).isNotNull();
+        assertThat(result.getPropertyType()).isNull();
+        assertThat(result.getSharePropertyWithLandlord()).isNull();
     }
 
     @Test
-    public void shouldReturnNullWhenAddressIsNull() {
+    public void shouldMapPropertyDetailsWhenAddressIsNull() {
         PTCaseEntity ptCaseEntity = PTCaseEntity.builder()
             .tenancyDetails(List.of(TenancyDetailsEntity.builder().build()))
             .marketRentCases(List.of(MarketRentCaseEntity.builder().build()))
@@ -615,7 +619,55 @@ public class ApplicationMapperTest {
 
         PropertyDetailsDto result = ApplicationMapper.mapPropertyDetails(ptCaseEntity, party);
 
+        assertThat(result).isNotNull();
+        assertThat(result.getAddressLine1()).isNull();
+        assertThat(result.getPostcode()).isNull();
+    }
+
+    @Test
+    public void shouldReturnNullWhenNoPropertyEntitiesAndNoDocumentsExist() {
+        PTCaseEntity ptCaseEntity = PTCaseEntity.builder()
+            .tenancyDetails(Collections.emptyList())
+            .marketRentCases(Collections.emptyList())
+            .documents(Collections.emptyList())
+            .build();
+        CasePartyEntity party = CasePartyEntity.builder()
+            .addresses(Collections.emptyList())
+            .build();
+
+        PropertyDetailsDto result = ApplicationMapper.mapPropertyDetails(ptCaseEntity, party);
+
         assertThat(result).isNull();
+    }
+
+    @Test
+    public void shouldMapPropertyDocumentsWhenNoOtherPropertyEntitiesExist() {
+        DocumentEntity floorPlan = DocumentEntity.builder()
+            .documentType(DocumentType.PROPERTY_FLOOR_PLAN)
+            .url("http://cdam/cases/documents/abc")
+            .binaryUrl("http://cdam/cases/documents/abc/binary")
+            .fileName("floor-plan.pdf")
+            .contentType("application/pdf")
+            .size(1024L)
+            .build();
+
+        PTCaseEntity ptCaseEntity = PTCaseEntity.builder()
+            .tenancyDetails(Collections.emptyList())
+            .marketRentCases(Collections.emptyList())
+            .documents(List.of(floorPlan))
+            .build();
+        CasePartyEntity party = CasePartyEntity.builder()
+            .addresses(Collections.emptyList())
+            .build();
+
+        PropertyDetailsDto result = ApplicationMapper.mapPropertyDetails(ptCaseEntity, party);
+
+        assertThat(result).isNotNull();
+        assertThat(result.getFloorPlanDocument()).isNotNull();
+        assertThat(result.getFloorPlanDocument().getUrl()).isEqualTo("http://cdam/cases/documents/abc");
+        assertThat(result.getFloorPlanDocument().getFilename()).isEqualTo("floor-plan.pdf");
+        assertThat(result.getAddressLine1()).isNull();
+        assertThat(result.getPropertyType()).isNull();
     }
 
     @Test
@@ -652,8 +704,9 @@ public class ApplicationMapperTest {
             .utilitiesCostMonthly(new BigDecimal("60.00"))
             .utilitiesCostYearly(new BigDecimal("720.00"))
             .utilitiesFrequencyAndCostDetails("Utilities details")
+            .rentInclusiveOfUtilityCharges(YesOrNo.YES)
             .additionalRentalServiceChargesVary(YesOrNo.YES)
-            .additionalRentalVaryingServiceChargesDetails("Service charge details")
+            .varyingAdditionalRentalServiceChargesDetails("Service charge details")
             .build();
 
         PTCaseEntity ptCaseEntity = PTCaseEntity.builder()
@@ -684,30 +737,62 @@ public class ApplicationMapperTest {
         assertThat(result.getUtilitiesCostMonthly()).isEqualTo(new BigDecimal("60.00"));
         assertThat(result.getUtilitiesCostYearly()).isEqualTo(new BigDecimal("720.00"));
         assertThat(result.getUtilitiesPaidFrequencyAndCostDetails()).isEqualTo("Utilities details");
+        assertThat(result.getRentInclusiveOfUtilityCharges()).isEqualTo(YesOrNo.YES);
         assertThat(result.getCurrentTenancyStartDate()).isEqualTo(startDate);
         assertThat(result.getCurrentTenancyEndDate()).isEqualTo(endDate);
         assertThat(result.getCurrentTenancyReplaceOriginalTenancy()).isEqualTo(YesNoNotSure.YES);
         assertThat(result.getOriginalTenancyStartDate()).isEqualTo(originalStartDate);
         assertThat(result.getAdditionalRentalServiceChargesVary()).isEqualTo(YesOrNo.YES);
-        assertThat(result.getAdditionalRentalVaryingServiceChargesDetails()).isEqualTo("Service charge details");
+        assertThat(result.getVaryingAdditionalRentalServiceChargesDetails()).isEqualTo("Service charge details");
     }
 
     @Test
-    public void shouldReturnNullWhenTenancyDetailsIsNullForCurrentRentDetails() {
+    public void shouldMapCurrentRentDetailsWhenTenancyDetailsIsNull() {
+        MarketRentCaseEntity marketRentCase = MarketRentCaseEntity.builder()
+            .rentPaymentFrequency(Frequency.MONTHLY)
+            .rentCostMonthly(new BigDecimal("400.00"))
+            .build();
+
         PTCaseEntity ptCaseEntity = PTCaseEntity.builder()
             .tenancyDetails(Collections.emptyList())
-            .marketRentCases(List.of(MarketRentCaseEntity.builder().build()))
+            .marketRentCases(List.of(marketRentCase))
             .build();
 
         CurrentRentsDetailsDto result = ApplicationMapper.mapCurrentRentDetails(ptCaseEntity);
 
-        assertThat(result).isNull();
+        assertThat(result).isNotNull();
+        assertThat(result.getRentPaymentFrequency()).isEqualTo(Frequency.MONTHLY);
+        assertThat(result.getRentCostMonthly()).isEqualTo(new BigDecimal("400.00"));
+        assertThat(result.getTribunalPreviouslyDeterminedTenancyRent()).isNull();
+        assertThat(result.getCurrentTenancyStartDate()).isNull();
     }
 
     @Test
-    public void shouldReturnNullWhenMarketRentCaseIsNullForCurrentRentDetails() {
+    public void shouldMapCurrentRentDetailsWhenMarketRentCaseIsNull() {
+        LocalDateTime startDate = LocalDateTime.of(2025, 1, 1, 0, 0);
+        TenancyDetailsEntity tenancyDetails = TenancyDetailsEntity.builder()
+            .tribunalPreviouslyDeterminedTenancyRent(YesOrNo.YES)
+            .currentTenancyStartDate(startDate)
+            .build();
+
         PTCaseEntity ptCaseEntity = PTCaseEntity.builder()
-            .tenancyDetails(List.of(TenancyDetailsEntity.builder().build()))
+            .tenancyDetails(List.of(tenancyDetails))
+            .marketRentCases(Collections.emptyList())
+            .build();
+
+        CurrentRentsDetailsDto result = ApplicationMapper.mapCurrentRentDetails(ptCaseEntity);
+
+        assertThat(result).isNotNull();
+        assertThat(result.getTribunalPreviouslyDeterminedTenancyRent()).isEqualTo(YesOrNo.YES);
+        assertThat(result.getCurrentTenancyStartDate()).isEqualTo(startDate);
+        assertThat(result.getRentPaymentFrequency()).isNull();
+        assertThat(result.getRentCostMonthly()).isNull();
+    }
+
+    @Test
+    public void shouldReturnNullWhenNoCurrentRentEntitiesExist() {
+        PTCaseEntity ptCaseEntity = PTCaseEntity.builder()
+            .tenancyDetails(Collections.emptyList())
             .marketRentCases(Collections.emptyList())
             .build();
 
@@ -817,13 +902,36 @@ public class ApplicationMapperTest {
         assertThat(result).isNotNull();
         assertThat(result.getCopyOfTenancyAgreement()).isEqualTo(YesOrNo.YES);
         assertThat(result.getNoTenancyAgreementReason()).isEqualTo("Reason");
-        assertThat(result.getTenancyAgreementEvidence()).isNotNull();
-        assertThat(result.getTenancyAgreementEvidence().getUrl()).isEqualTo("http://dm-store/doc/tenancy-agreement");
-        assertThat(result.getTenancyAgreementEvidence().getBinaryUrl())
+        assertThat(result.getTenancyAgreementDocument()).isNotNull();
+        assertThat(result.getTenancyAgreementDocument().getUrl()).isEqualTo("http://dm-store/doc/tenancy-agreement");
+        assertThat(result.getTenancyAgreementDocument().getBinaryUrl())
             .isEqualTo("http://dm-store/doc/tenancy-agreement/binary");
-        assertThat(result.getTenancyAgreementEvidence().getFilename()).isEqualTo("tenancy-agreement.pdf");
-        assertThat(result.getTenancyAgreementEvidence().getContentType()).isEqualTo("application/pdf");
-        assertThat(result.getTenancyAgreementEvidence().getSize()).isEqualTo(2048L);
+        assertThat(result.getTenancyAgreementDocument().getFilename()).isEqualTo("tenancy-agreement.pdf");
+        assertThat(result.getTenancyAgreementDocument().getContentType()).isEqualTo("application/pdf");
+        assertThat(result.getTenancyAgreementDocument().getSize()).isEqualTo(2048L);
+    }
+
+    @Test
+    public void shouldMapNoticeDocumentsWhenNoNoticeOfRentChangeExists() {
+        DocumentEntity notice = DocumentEntity.builder()
+            .documentType(DocumentType.NEW_RENT_INCREASE_NOTICE)
+            .url("http://cdam/cases/documents/def")
+            .binaryUrl("http://cdam/cases/documents/def/binary")
+            .fileName("notice.pdf")
+            .build();
+
+        PTCaseEntity ptCaseEntity = PTCaseEntity.builder()
+            .noticeOfRentChanges(Collections.emptyList())
+            .documents(List.of(notice))
+            .build();
+
+        NoticeOfRentIncreaseDto result = ApplicationMapper.mapNoticeOfRentChangeDetails(ptCaseEntity);
+
+        assertThat(result).isNotNull();
+        assertThat(result.getLandlordNoticeProposingNewRentDocument()).isNotNull();
+        assertThat(result.getLandlordNoticeProposingNewRentDocument().getUrl())
+            .isEqualTo("http://cdam/cases/documents/def");
+        assertThat(result.getReceivedLandlordNoticeProposingNewRent()).isNull();
     }
 
     @Test
@@ -843,7 +951,7 @@ public class ApplicationMapperTest {
         assertThat(result).isNotNull();
         assertThat(result.getCopyOfTenancyAgreement()).isEqualTo(YesOrNo.NO);
         assertThat(result.getNoTenancyAgreementReason()).isEqualTo("No agreement available");
-        assertThat(result.getTenancyAgreementEvidence()).isNull();
+        assertThat(result.getTenancyAgreementDocument()).isNull();
     }
 
     @Test
@@ -967,28 +1075,28 @@ public class ApplicationMapperTest {
 
     private static List<AddressEntity> addresses(String postcode) {
         return List.of(AddressEntity.builder()
-            .addressLine1("123 Test St")
-            .postTown("London")
-            .postcode(postcode)
-            .build());
+                           .addressLine1("123 Test St")
+                           .postTown("London")
+                           .postcode(postcode)
+                           .build());
     }
 
     private static List<TenancyDetailsEntity> tenancyDetails(TenancyType tenancyType) {
         return List.of(TenancyDetailsEntity.builder()
-            .tenancyType(tenancyType)
-            .copyOfTenancyAgreement(YesOrNo.YES)
-            .noTenancyAgreementReason("No agreement reason")
-            .build());
+                           .tenancyType(tenancyType)
+                           .copyOfTenancyAgreement(YesOrNo.YES)
+                           .noTenancyAgreementReason("No agreement reason")
+                           .build());
     }
 
     private static List<MarketRentCaseEntity> marketRentCases() {
         return List.of(MarketRentCaseEntity.builder()
-            .typeOfPropertyRenting(PropertyType.TERRACED_HOUSE)
-            .applicantSuggestedMonthlyMarketRent(new BigDecimal("1200.00"))
-            .applicantSuggestedMonthlyMarketRentReasons("Market rate for the area")
-            .additionalPropertyInfoToConsiderWhenDeterminingRent(YesOrNo.YES)
-            .additionalPropertyInfoToConsiderWhenDeterminingRentDetails("Renovations")
-            .build());
+                           .typeOfPropertyRenting(PropertyType.TERRACED_HOUSE)
+                           .applicantSuggestedMonthlyMarketRent(new BigDecimal("1200.00"))
+                           .applicantSuggestedMonthlyMarketRentReasons("Market rate for the area")
+                           .additionalPropertyInfoToConsiderWhenDeterminingRent(YesOrNo.YES)
+                           .additionalPropertyInfoToConsiderWhenDeterminingRentDetails("Renovations")
+                           .build());
     }
 
     private static PTCaseEntity ptCase(List<AddressEntity> addresses, List<TenancyDetailsEntity> tenancyDetails) {
@@ -1040,8 +1148,8 @@ public class ApplicationMapperTest {
 
     private static List<CasePartyContactPreferenceEntity> contactPreferences(YesOrNo text, YesOrNo phone) {
         return List.of(CasePartyContactPreferenceEntity.builder()
-            .contactByText(text)
-            .build());
+                           .contactByText(text)
+                           .build());
     }
 
     private static CaseApplicationEntity entityWithCaseType(
